--- a/login.html
+++ b/login.html
@@ -84,11 +84,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="newsletter-wrap-three" id="NewsletterWrapper">
-                                <div class="newsletter-content">
+                            <div class="newsletter-wrap-three d-block text-align-center justify-content-center" id="NewsletterWrapper">
+                                <div class="newsletter-content mb-4 text-align-center w-100">
                                     <h2 class="title">Cập nhật tin tức mới nhất, đúng nhất</h2>
                                 </div>
-                                <div class="newsletter-form">
+                                <div class="newsletter-form mx-auto w-100">
+                                    <div id="formMessage"></div>
                                     <form action="#" id="AuthForm">
                                         <div class="form-grp">
                                             <input type="email" placeholder="Email" name="email" id="email" required>
@@ -99,7 +100,7 @@
                                         <button type="submit" class="btn">Đăng nhập</button>
                                     </form>
                                 </div>
-                                <div class="newsletter-social">
+                                <div class="newsletter-social justify-content-center mt-4">
                                     <h4 class="title">Theo dõi chúng tôi tại:</h4>
                                     <ul class="list-wrap">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
