done pagination in category

--- a/category.html
+++ b/category.html
@@ -242,11 +242,11 @@
                                     <nav aria-label="Page navigation example">
                                         <ul class="pagination list-wrap" id="myPagination">
                                             <li class="page-item"><a class="page-link-prev page-link" href="#">Previous</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">4</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">5</a></li>
+                                            <li class="page-item"><a class="page-link number-link" href="#">1</a></li>
+                                            <li class="page-item"><a class="page-link number-link" href="#">2</a></li>
+                                            <li class="page-item"><a class="page-link number-link" href="#">3</a></li>
+                                            <li class="page-item"><a class="page-link number-link" href="#">4</a></li>
+                                            <li class="page-item"><a class="page-link number-link" href="#">5</a></li>
                                             <li class="page-item"><a class="page-link-next page-link" href="#">Next</a></li>
                                         </ul>
                                     </nav>
