partial finish render pagination

--- a/search.html
+++ b/search.html
@@ -82,6 +82,13 @@
                                 <div class="pagination-wrap mt-60">
                                     <nav aria-label="Page navigation example">
                                         <ul class="pagination list-wrap" id="myPagination">
+                                            <li class="page-item"><a class="page-link-prev page-link" href="#">Previous</a></li>
+                                            <li class="page-item"><a class="page-link number-link" href="#">1</a></li>
+                                            <li class="page-item"><a class="page-link number-link" href="#">2</a></li>
+                                            <li class="page-item"><a class="page-link number-link" href="#">3</a></li>
+                                            <li class="page-item"><a class="page-link number-link" href="#">4</a></li>
+                                            <li class="page-item"><a class="page-link number-link" href="#">5</a></li>
+                                            <li class="page-item"><a class="page-link-next page-link" href="#">Next</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -90,15 +97,15 @@
                                 <div class="sidebar-wrap">
                                     <div class="sidebar-widget">
                                         <div class="sidebar-search">
-                                            <form action="#">
+                                            <!-- <form action="#">
                                                 <input type="text" placeholder="Search . . .">
                                                 <button type="submit"><i class="flaticon-search"></i></button>
-                                            </form>
+                                            </form> -->
                                         </div>
                                     </div>
                                    <div class="sidebar-widget sidebar-widget-two">
                                         <div class="widget-title mb-25">
-                                            <h2 class="title">Subscribe & Followers</h2>
+                                            <h2 class="title">Mạng xã hội</h2>
                                             <div class="section-title-line"></div>
                                         </div>
                                         <div class="sidebar-social-wrap">
