update except comments

--- a/admin-create-article.html
+++ b/admin-create-article.html
@@ -136,6 +136,7 @@
                                             required value=""
                                         />
                                     </div>
+                                    <button type="button" class="btn btn-danger mb-3 RandomButtonCSS" id="createArticle">Random ảnh</button>
                                     <div class="form-grp">
                                         <input
                                             type="text"
@@ -144,9 +145,9 @@
                                             id="title"
                                             placeholder="Tiêu đề"
                                             required value="title"
+                                            
                                         />    
                                     </div>
-                                    <button class="btn btn-danger mb-3 RandomButtonCSS" id="createArticle">Random ảnh</button>
                                     <div class="form-grp">
                                         <select class="form-select" id="category_id" name="category_id">
                                             <option selected>Chọn danh mục</option>
