--- a/login.html
+++ b/login.html
@@ -85,12 +85,12 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="newsletter-wrap-three d-block text-align-center justify-content-center" id="NewsletterWrapper">
-                                <div class="newsletter-content mb-4 text-align-center w-100">
+                                <div class="newsletter-content mb-4 text-center w-100">
                                     <h2 class="title">Cập nhật tin tức mới nhất, đúng nhất</h2>
                                 </div>
                                 <div class="newsletter-form mx-auto w-100">
                                     <div id="formMessage"></div>
-                                    <form action="#" id="AuthForm">
+                                    <form action="#" id="AuthForm" class="justify-content-center">
                                         <div class="form-grp">
                                             <input type="email" placeholder="Email" name="email" id="email" required>
                                         </div>
