--- a/category.html
+++ b/category.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Zaira - News Magazine HTML Template</title>
+        <title>Thể loại bài viết</title>
         <meta name="description" content="Zaira - News Magazine HTML Template">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -254,17 +254,9 @@
                             </div>
                             <div class="col-30">
                                 <div class="sidebar-wrap">
-                                    <!-- <div class="sidebar-widget">
-                                        <div class="sidebar-search">
-                                            <form action="#">
-                                                <input type="text" placeholder="Search . . .">
-                                                <button type="submit"><i class="flaticon-search"></i></button>
-                                            </form>
-                                        </div>
-                                    </div> --> 
                                     <div class="sidebar-widget sidebar-widget-two">
                                         <div class="widget-title mb-25">
-                                            <h2 class="title">Subscribe & Followers</h2>
+                                            <h2 class="title">Mạng xã hội</h2>
                                             <div class="section-title-line"></div>
                                         </div>
                                         <div class="sidebar-social-wrap d-flex gap-1">
