--- a/admin-update-article.html
+++ b/admin-update-article.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Zaira - News Magazine HTML Template</title>
+        <title>Cập nhật bài viết</title>
         <meta name="description" content="Zaira - News Magazine HTML Template">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
